<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="splash" translatable="false">Splash</string>
    <string name="app_name">#rainbow generator</string>
    <string name="name">#rainbow menu</string>

    <string name="power" translatable="false">Powered by Razzhivaykin Igor</string>


    <string name="home">Home</string>
    <string name="camera">Camera</string>
    <string name="ls">Locale Storage</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about_support">About &amp; Support</string>

    <string name="cs">Coming soon…</string>

    <string name="result">Result</string>

    <string-array name="nav_drawer_items">
        <item>@string/home</item>
        <item>@string/camera</item>
        <item>@string/ls</item>
        <item>@string/settings</item>
        <item>@string/help</item>
        <item>@string/about_support</item>
    </string-array>

    <array name="nav_drawer_icon">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_camera</item>
        <item>@drawable/ic_ls</item>
        <item>@drawable/ic_settings</item>
        <item>@drawable/ic_help</item>
        <item>@drawable/ic_about</item>
    </array>

    <string name="desc_list_item_icon" translatable="false">Item icon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="help_ui">UI Help</string>
    <string name="help_ui_1">Swipe from left to right or press hamburger</string>
    <string name="help_ui_2"> Select item in main navigation panel</string>

    <string name="help_cam">Camera Help</string>
    <string name="help_cam_1">Press the button at bottom right corner</string>
    <string name="help_cam_2">Create a photo</string>
    <string name="help_cam_3">Confirm your picture</string>
    <string name="help_cam_4">Expect to create a palette</string>


    <string name="help_ls">Locale Storage Help</string>
    <string name="help_ls_1" translatable="false"></string>
    <string name="help_ls_2" translatable="false"></string>

    <string name="help_set">Settings Help</string>
    <string name="help_set_1" translatable="false"></string>
    <string name="help_set_2" translatable="false"></string>

    <string name="mail" translatable="false">grk.rise@gmail.com</string>
    <string name="myname" translatable="false">Razzhivaykin Igor</string>
    <string name="version">Version</string>
    <string name="vers">0.0.9 beta</string>
    <string name="copy" translatable="false">Copyright &#169; 2015 Razzhivaykin Igor </string>
    <string name="about">App name</string>
    <string name="support">Support</string>
    <string name="copyright">Copyright</string>
    <string name="create">Created by</string>




</resources>
