<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.grk_rise.ddc.activitys.HomeActivity$PlaceholderFragment"
    android:background="@color/background"
    android:orientation="vertical"
    android:weightSum="1">



    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_ui"
            android:textColor="@color/back_text"
            android:textSize="@dimen/help_title"
            android:id="@+id/head_ui"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_ui_1"
            android:paddingLeft="@dimen/stand_padding"
            android:textSize="@dimen/stand_text"
            android:textColor="@color/help_text"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_ui_2"
            android:paddingLeft="@dimen/stand_padding"
            android:textSize="@dimen/stand_text"
            android:textColor="@color/help_text"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_cam"
            android:textColor="@color/back_text"
            android:textSize="@dimen/help_title"
            android:id="@+id/head_camera"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_cam_1"
            android:paddingLeft="@dimen/stand_padding"
            android:textSize="@dimen/stand_text"
            android:textColor="@color/help_text"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_cam_2"
            android:paddingLeft="@dimen/stand_padding"
            android:textSize="@dimen/stand_text"
            android:textColor="@color/help_text"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_ls"
            android:textColor="@color/back_text"
            android:textSize="@dimen/help_title"
            android:id="@+id/head_ls"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_ls_1"
            android:paddingLeft="@dimen/stand_padding"
            android:textSize="@dimen/stand_text"
            android:textColor="@color/help_text"/>

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_ls_2"
            android:paddingLeft="@dimen/stand_padding"
            android:textSize="@dimen/stand_text"
            android:textColor="@color/help_text"/>

        </LinearLayout>

    </ScrollView>



</LinearLayout>
