<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.grk_rise.rainbow.activitys.CameraFragment"
    android:background="@color/background"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TableRow>
            <TextView android:id="@+id/about" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:ems="5"
                android:gravity="center"
                android:textColor="@color/back_text"
                android:textSize="@dimen/stand_text"
                />
            <TextView android:id="@+id/about_text" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="9"
                android:text="@string/app_name"
                android:gravity="center"
                android:textColor="@color/back_text"
                android:textSize="@dimen/stand_text"
                />
        </TableRow>
        <TableRow>
            <TextView android:id="@+id/create" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:gravity="center"
                android:textColor="@color/back_text"
                android:textSize="@dimen/stand_text"
                />
            <TextView android:id="@+id/myname_1" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myname"
                android:gravity="center"
                android:textColor="@color/back_text"
                android:textSize="@dimen/stand_text"
                />
        </TableRow>
        <TableRow>
            <TextView android:id="@+id/version" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:gravity="center"
                android:textColor="@color/back_text"
                android:textSize="@dimen/stand_text"
                />
            <TextView android:id="@+id/vers" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vers"
                android:gravity="center"
                android:textColor="@color/back_text"
                android:textSize="@dimen/stand_text"
                />
        </TableRow>
        <TableRow>
            <TextView android:id="@+id/support" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/support"
                android:gravity="center"
                android:textColor="@color/back_text"
                android:textSize="@dimen/stand_text"
                />
            <TextView android:id="@+id/mail" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail"
                android:gravity="center"
                android:textColor="@color/back_text"
                android:textSize="@dimen/stand_text"
                />
        </TableRow>
    </TableLayout>

    <TextView android:id="@+id/copy" android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/copy"
        android:gravity="bottom"
        android:textColor="@color/back_text"
        android:textSize="@dimen/stand_text"
    />



</LinearLayout>